# any-stuffed

./: README.md  rustfmt.toml
chrome-extension/: readme.md
chrome-extension/dioxus/: Cargo.toml  Makefile.toml  dx-ext.toml
chrome-extension/dioxus/refresher/: background_index.js  content_index.js  index.html  index.js  manifest.json
chrome-extension/dioxus/refresher/background/: Cargo.toml
chrome-extension/dioxus/refresher/background/src/: lib.rs
chrome-extension/dioxus/refresher/common/: Cargo.toml
chrome-extension/dioxus/refresher/common/src/: extraction.rs  lib.rs  msg_way.rs
chrome-extension/dioxus/refresher/content/: Cargo.toml
chrome-extension/dioxus/refresher/content/src/: extractor.rs  lib.rs  listener.rs  shared.rs  storing.rs
chrome-extension/dioxus/refresher/popup/: Cargo.toml
chrome-extension/dioxus/refresher/popup/assets/: index.css
chrome-extension/dioxus/refresher/popup/src/: lib.rs
chrome-extension/dioxus/refresher/popup/src/components/: counter.rs  extracter.rs  extractor.rs  global.rs  mod.rs
chrome-extension/leptos/: Cargo.toml  Makefile.toml
chrome-extension/leptos/constant/: index.html  index.js  manifest.json
chrome-extension/leptos/src/: lib.rs
chrome-extension/leptos/src/components/: counter.rs  global.rs  mod.rs
chrome-extension/wasm-only/: Cargo.toml  manifest.json  package.json
chrome-extension/wasm-only/js/: background.js  popup.html  popup.js
chrome-extension/wasm-only/src/: lib.rs  macroing.rs  popup.rs
