[package]
name = "the_refresher"
version = "0.1.0"
edition = "2024"
authors = ["Chssam"]
license = "Apache-2.0 OR MIT"
rust-version = "1.87"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
reactive_stores = "0.2"
reactive_stores_macro = "0.2"

# [dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
