[package]
name = "refresher"
version = "0.1.0"
edition = "2024"
authors = ["Chssam"]
license = "Apache-2.0 OR MIT"
rust-version = "1.87"
publish = false

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# dioxus = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Node",
    "Location",
    "CssStyleDeclaration",
    # "WorkerGlobalScope",
    # "WorkerLocation",
]
