[package]
name = "popup"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common.workspace = true

dioxus = { workspace = true, features = ["web"] }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
gloo.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
anyhow.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "EventTarget",
    "Location",
    "NodeList",
    "Window",
    "console",
] }

[lints]
workspace = true
